# d3d12book

./: .gitignore
Chapter 1 Vector Algebra/XMVECTOR/: CMakeLists.txt  InitFunctions.cpp  VectorOps.cpp  tol.cpp  xmvec3.cpp
Chapter 10 Blending/BlendDemo/: BlendApp.cpp  CMakeLists.txt
Chapter 11 Stenciling/StencilDemo/: CMakeLists.txt  StencilApp.cpp
Chapter 12 The Geometry Shader/TreeBillboards/: CMakeLists.txt  TreeBillboardsApp.cpp
Chapter 13 The Compute Shader/Blur/: BlurApp.cpp  CMakeLists.txt
Chapter 13 The Compute Shader/SobelFilter/: CMakeLists.txt  SobelApp.cpp
Chapter 13 The Compute Shader/VecAdd/: CMakeLists.txt
Chapter 13 The Compute Shader/WavesCS/: CMakeLists.txt  WavesCSApp.cpp
Chapter 14 The Tessellation Stages/BasicTessellation/: BasicTessellationApp.cpp  CMakeLists.txt
Chapter 14 The Tessellation Stages/BezierPatch/: BezierPatchApp.cpp  CMakeLists.txt
Chapter 15 First Person Camera and Dynamic Indexing/CameraAndDynamicIndexing/: CMakeLists.txt  CameraAndDynamicIndexingApp.cpp
Chapter 16 Instancing and Frustum Culling/InstancingAndCulling/: CMakeLists.txt  InstancingAndCullingApp.cpp
Chapter 17 Picking/Picking/: CMakeLists.txt  PickingApp.cpp
Chapter 18 Cube Mapping/CubeMap/: CMakeLists.txt  CubeMapApp.cpp
Chapter 18 Cube Mapping/DynamicCube/: CMakeLists.txt  DynamicCubeMapApp.cpp
Chapter 19 Normal Mapping/NormalMap/: CMakeLists.txt  NormalMapApp.cpp
Chapter 21 Ambient Occlusion/Ssao/: CMakeLists.txt  SsaoApp.cpp
Chapter 22 Quaternions/QuatDemo/: QuatApp.cpp  (+1 more)
Chapter 9 Texturing/TexColumns/: CMakeLists.txt  TexColumnsApp.cpp
Common/: d3dApp.cpp  d3dApp.h
(+20 files in other folders)
